--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "redux": "^4.2.0"
   }
 }
