--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "mern-shopping",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.x", 
+    "npm": "8.x"
+  },
   "description": "",
   "main": "server/server.js",
   "scripts": {
@@ -18,6 +22,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   }
 }
